# sori-mix

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-mac.yml  deploy-pages.yml  release-mac.yml
Source/: AssistantClient.cpp  AssistantClient.h  AssistantTypes.h  ChainEngine.cpp  ChainEngine.h  DSPModules.cpp  DSPModules.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SecureCredentialStore.cpp  SecureCredentialStore.h  SecureCredentialStore_fallback.cpp  SecureCredentialStore_mac.mm  VocalChain.cpp  VocalChain.h
docs/: index.html  styles.css
scripts/: build-mac-pkg.sh  codesign-mac.sh  notarize-mac-pkg.sh  notarize-mac.sh  package-mac.sh  validate-plugin.sh
